# fx2hid_mod

./: CMakeLists.txt  Makefile  README.md  dscr.LST  dscr.a51  fw.LST  fx2hid  fx2hid.LST  fx2hid.M51  fx2hid.Opt  fx2hid.Uv2  fx2hid.c  fx2hid.hex  fx2hid.lnp  fx2hid.plg  readme.txt  test_host.c
fx2hid_agy/: fw.c  fx2hid.c
